# saucenaopie

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: discord_bot.py  telegram_bot.py
saucenaopie/: __init__.py  exceptions.py  helper.py
saucenaopie/client/: __init__.py  asyncio.py  base.py  sync.py
saucenaopie/types/: __init__.py  account.py  response.py  result.py  sauce.py
