[tool.poetry]
name = "saucenaopie"
version = "1.0.0"
description = "Modern and easy-to-use Python implementation for the SauceNao API, with Pydantic and full asyncio support."
authors = ["WhiteMemory99 <lisen1510@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/WhiteMemory99/saucenaopie"
repository = "https://github.com/WhiteMemory99/saucenaopie"
keywords = ["saucenao"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.19.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
