[tool.poetry]
name = "saucenaopie"
version = "1.1.2"
description = "Modern and easy-to-use Python implementation for the SauceNao API, with Pydantic and full asyncio support."
authors = ["WhiteMemory99 <lisen1510@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/WhiteMemory99/saucenaopie"
repository = "https://github.com/WhiteMemory99/saucenaopie"
keywords = ["saucenao"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
known_third_party = ["pydantic", "httpx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
